--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
+cap02-servlet/Carros/build/*
+cap04-jdbc/Carros/build/*
 
-cap04-jdbc/Carros/WebContent/WEB-INF/lib/mysql-connector-java-5.1.13-bin.jar
